API call optimization

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^1.13.0",
     "lucide-react": "^0.539.0",
+    "mime": "^4.0.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
